# velur-game

./: .gitignore  README.md  agents.py  config.py  domain.py  engine.py  loop.py  loops.py  lore.py  main.py  persistence.py  pyproject.toml  rules.py
lore/: War of the Orders Series: Overview.md  War of the Orders: A Sea of Fire, Chapter I.md  War of the Orders: A Sea of Fire, Chapter II.md  War of the Orders: A Sea of Fire, Chapter III.md  War of the Orders: A Sea of Fire, Prologue.md  War of the Orders: A Sea of Fire.md  War of the Orders: Act I Outline.md  War of the Orders: Character Overviews.md  War of the Orders: Characters.md
saves/: save.json
